[gd_scene load_steps=5 format=3 uid="uid://djxhlgdytqpxw"]

[ext_resource type="Shader" path="res://source/ui/blur.gdshader" id="1_8yrix"]
[ext_resource type="Script" path="res://source/ui/pause/pause_menu.gd" id="1_32nlg"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vxjtt"]
shader = ExtResource("1_8yrix")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1xjwr"]
resource_local_to_scene = true
shader = ExtResource("1_8yrix")

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_32nlg")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
material = SubResource("ShaderMaterial_vxjtt")
custom_minimum_size = Vector2(0, 300)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Paused"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MenuButtons" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
material = SubResource("ShaderMaterial_1xjwr")
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
size_flags_stretch_ratio = 4.0

[node name="ResumeButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MenuButtons"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BigButton"
text = "Resume"

[node name="SaveButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MenuButtons"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BigButton"
text = "Save"

[node name="QuitButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MenuButtons"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BigButton"
text = "Main Menu"

[node name="QuitToDesktopButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MenuButtons"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BigButton"
text = "Quit to Desktop"
